--- a/.github/workflows/multi-arch-test-build.yml
+++ b/.github/workflows/multi-arch-test-build.yml
@@ -1,9 +1,7 @@
 name: Test Build
 
 on:
-  pull_request:
-    paths-ignore:
-      - '**.md'
+ workflow_dispatch:
 
 jobs:
   build:
@@ -13,30 +11,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - arch: arm_cortex-a9_vfpv3-d16
-            target: mvebu-cortexa9
-
-          - arch: mips_24kc
-            target: ath79-generic
-
-          - arch: mipsel_24kc
-            target: mt7621
-
-          - arch: powerpc_464fp
-            target: apm821xx-nand
-
-          - arch: powerpc_8548
-            target: mpc85xx-p1010
-
-          - arch: aarch64_cortex-a53
-            target: mvebu-cortexa53
-
-          - arch: arm_cortex-a15_neon-vfpv4
-            target: armvirt-32
-
-          - arch: i386_pentium-mmx
-            target: x86-geode
-
           - arch: x86_64
             target: x86-64
 
@@ -123,12 +97,4 @@ jobs:
           name: ${{env.ARCHIVE_NAME}}-packages
           path: |
             *.ipk
-            PKG-INFO
-
-      - name: Store logs
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{env.ARCHIVE_NAME}}-logs
-          path: |
-            logs/
             PKG-INFO
